[package]
name = "bbb-proof-of-concept"
version = "0.1.0"
license = "MIT"
authors = [
    "Alexis Williams <sasinestro@gmail.com>"
]

[lib]
name = "stage1"
path = "src/stage1.rs"
crate-type = ["staticlib"]

[features]
default = []

# processors
cpu-am335x = []

# boards
board-beaglebone-black = ["cpu-am335x"]

[dependencies]
rlibc = "~1.0.0"
interpolate_idents = "~0.1.0"
